--- a/css/stolen.css
+++ b/css/stolen.css
@@ -9,7 +9,7 @@
 
 
 /****************************************************************************
-    *-*-*HEADER-*-*
+*-*-*HEADER-*-*
 ****************************************************************************/
 
 .menu { display: flex; 
@@ -18,12 +18,13 @@
 
 header { 
     width: 100%; 
-    background: url("../img/custom/bg.jpg") top center repeat-x; 
+    background: url("../img/custom/bg5.jpg") top center repeat-x; 
     min-height: 209px; 
     text-align: center; 
     position: relative; 
     z-index: 99999; 
     background-size: cover; 
+    color: #ffffff;
 }
 body:not(.home) .header-wrap { 
     background-color: #cccccc; 
@@ -53,28 +54,32 @@ nav ul li a {
     margin: 0 39px; 
     display: block; 
     font:700 14px 'Lato', sans-serif; 
-    color: #ffffff; }
+    color: #ffffff; 
+}
 nav ul li a:hover {
     color: #e9b500;
     text-decoration: none;
 }
-nav ul li a.active {color: #e9b500;}
+nav ul li a.active {
+    color: #e9b500;
+}
 
 .logo { 
     margin: 0; 
     display: inline-block; 
     vertical-align: -10px; }
 
-.responsive-nav { text-align: left; 
-                 display: none; 
-                 position: relative; 
+.responsive-nav { 
+    text-align: left; 
+    display: none; 
+    position: relative; 
 }
 .responsive-nav a.open  { 
     display: block; 
     line-height: 47px; 
     position: relative;
     padding-left: 18px; 
-    background: #111111 url("../images/responsive-errow.png") 96% center no-repeat; 
+    background: #111111 url("../images/responsive-errow.png") center no-repeat; 
 
 }
 .responsive-nav a.open:hover,
