--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -155,7 +155,8 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/bg.jpg) no-repeat center center scroll;
+    padding-bottom: 25px;
+    /*background: url(../img/bg.jpg) no-repeat center center scroll;*/
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -247,4 +248,8 @@ footer {
   position: fixed;
   bottom: 5px;
   right: 5px;
+}
+
+.row {
+    margin: 0;
 }
