--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -1,10 +1,6 @@
-/*!
- * Start Bootstrap - Stylish Portfolio (http://startbootstrap.com/)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
- */
-
-/* Global Styles */
+/****************************************************************************
+*-*-* Global Styles -*-*
+****************************************************************************/
 
 html,
 body {
@@ -148,7 +144,9 @@ hr.small {
     margin: 5px 5px 0 0;
 }
 
-/* Header */
+/****************************************************************************
+*-*-* Header -*-*
+****************************************************************************/
 
 .header {
     display: table;
