--- a/css/stolen.css
+++ b/css/stolen.css
@@ -33,7 +33,7 @@ body:not(.home) .header-wrap {
 }
 header nav { 
     width: 100%; 
-    max-width: 1170px;
+    /*max-width: 1170px;*/
     /*background: url("../img/custom/bg.jpg");*/ 
     margin: 50px; 
     text-align: center;
@@ -113,10 +113,14 @@ nav ul li a.active {
     color: #e9b500; 
 }
 
+[alt^="Logo"] {
+    height: 100px;
+}
+
 /****************************************************************************
         *-*-*ABOUT TEAM-*-*
 ****************************************************************************/
-
+/*
 .container_wrapper { 
     background: #ffffff; 
     overflow-x: hidden; 
@@ -153,7 +157,7 @@ nav ul li a.active {
     margin-left: 0px; 
 }
 .progress-bars p {
-    /*font:700 13px 'Lato', sans-serif;*/ 
+    font:700 13px 'Lato', sans-serif; 
     color: #3b4c5a; 
     margin-bottom: 10px;
 }
@@ -170,7 +174,7 @@ nav ul li a.active {
     background: #ebc40d; 
     color: #ffffff; 
     padding-left: 20px;
-    /*font:13px 'Lato', sans-serif;*/
+    font:13px 'Lato', sans-serif;
     line-height: 20px;
 }
 .progress-bars .base div span {
@@ -188,11 +192,11 @@ nav ul li a.active {
     width: 1170px; 
     margin:0 auto;
 }
-.our-team h3 {
+*/.our-team h3 {
     text-align: left; 
     margin-bottom: 24px; 
     color: #292d33;
-}
+}/*
 .our-team div {
     width: 262.5px; 
     margin-right:30px; 
@@ -244,12 +248,13 @@ nav ul li a.active {
     height: 170px;
     border-radius: 7px;
 }
-.our-team figure img { 
-    width: 100%; 
-    height: 100%; 
+*/
+section#about {
+    margin: 15px auto;
+}
+.our-team img { 
     border-radius: 7px; 
 }
-
 .our-team span {
     font:700 14px 'Lato', sans-serif; 
     color: #ebbf0d; 
