--- a/css/stolen.css
+++ b/css/stolen.css
@@ -10,13 +10,28 @@
     width: 100%;
 }
 
-nav.fixed {
+.fixed {
     position:fixed;
     margin: 0;
     padding: 0;
     top:0; left:0;
     width:100%;
     background: rgba(0,0,0,.8);
+}
+
+.fixed img {
+    width: 100px;
+    height: 80px;
+    margin: 10px 0 10px 50px;
+}
+
+
+.fixed ul {
+    margin: 20px;
+}
+
+.fixed div {
+    margin: 0;
 }
 
 
@@ -35,13 +50,14 @@ body:not(.home) .header-wrap {
 }
 header nav { 
     width: 100%; 
-    margin: 50px 0;
     text-align: center;
 }
 
 nav > ul { 
     display: inline-block; 
     list-style: none; 
+    margin-top: 50px;
+    margin-bottom: 10px;
 }
 nav > ul > li  { 
     position: relative; 
@@ -67,7 +83,7 @@ nav ul li a.active {
 }
 
 .logo { 
-    margin: 0; 
+    margin: 20px 0 30px 30px; 
     display: inline-block; 
     vertical-align: -10px; 
 }
